Add basic CSS styles for body, h1 and p

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Моя родина - Ингушетия</title>
+        <link rel="stylesheet" href="style.css">
      </head>
      <body>
         <h1>Ингушетия - Моя Родина</h1>
